
29/12/2020 (1):

- Function **createuser** dan **createbook**
Kedua function ini sekarang sudah secara otomatis juga menambahkan _instance_ yang terbuat pada function ini ke dalam array masing2 (seperti user array dan book array)

- Function **book_paginate**
Terdapat perbaikan sedikit untuk proses sortingnya.
Sebelumnya sorting dilakukan pada array yang terbagi, tetapi hal ini menghasilkan sortingan yang kurang sesuai karena semuanya tidak di sort.

- Macro **MAXNAME_LENGTH**
Maksimum panjang semua string yang terdapat pada struct di `common.h` dirubah dari 129 menjadi 40.
Hal ini dilakukan agar string yang dimasukkan tidak terlalu panjang, kemudian hal ini juga sudah berlaku pada judul buku (sebelumnya mengikuti max file dari stdio yaitu 260)

-----------------------------------------------------------------------

29/12/2020 (2):

- Struct **book_t** dan **user_t**
Pada struct `book_t` ditambah atribut `time_t btime` yang akan digunakan sebagai kapan buku tersebut mulai dipinjam.
Pada struct `User_t` ditambah atribut `int book_ids[MAX_BORROW]` dan `int book_count` (MAX_BORROW berupa macro yang terdefinisi pada `common.h`),
atribut2 tersebut digunakan untuk mengetahui buku apa saja yang telah dipinjam oleh user.

- Function **createbook** dan **createuser**
Untuk memenuhi pembuatan struct `book_t` karena terdapat atribut baru maka parameter ini ditambahkan lagi, yaitu `time_t btime`.
Begitu pula untuk pembuatan struct `user_t`.

- Function **book_paginate**
Tidak menggunakan _memory allocation_ lagi karena sudah optimalkan. Artinya kita tidak perlu menggunakan `free` function terhadap hasil dari ini function.

- Tipedata **int** menjadi **unsigned**
Pada `common.h` dan `common.c` terdapat perubahan berupa tipedata `int` menjadi `unsigned` atau `unsigned int` lebih tepatnya.
Hal ini karena `unsigned int` tidak menerima angka negatif dan hanya menerima positif, contohnya seperti id buku kan tidak mungkin negatif nilainya