@@ -16,7 +16,7 @@ void sleep(long millis) {
 }
 
 void clearscreen() {
-#ifdef WIN32
+#ifdef _WIN32
     system("cls");
 #else
     system("clear");
